--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "material-design-icons-iconfont": "^3.0.3",
+    "moment": "^2.22.2",
     "nodeman": "^1.1.2",
     "roboto-fontface": "*",
     "vue": "^2.5.17",
