--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodeman": "^1.1.2",
     "roboto-fontface": "*",
     "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
     "vuetify": "^1.2.4",
     "vuex": "^3.0.1"
   },
